# DVEngine

./: .flake8  .gitattributes  .gitignore  .pre-commit-config.yaml  .pylintrc  CLAUDE.md  CLEANUP_SUMMARY.md  DEVELOPMENT.md  LICENSE  MODERN_WEB_EXPORT.md  Makefile  README.md  build.bat  build.sh  build_config.spec  debug_templates.py  dev.bat  main.py  pyproject.toml  pytest.ini  refresh_styling.py  requirements-build.txt  requirements.txt  setup.py
.claude/: settings.local.json
dvge/: __init__.py  app.py  constants.py  data_models.py  game_mechanics.py  theme.py  utils.py
dvge/ai/: __init__.py  ai_service.py  contextual_suggestions.py  enhanced_generators.py  generators.py  providers.py  story_templates.py  tts_providers.py
dvge/constants/: __init__.py  colors.py  dimensions.py  fonts.py
dvge/core/: __init__.py  advanced_combat_engine.js  application.py  batch_operations.py  condition_evaluator.py  enhanced_html_exporter.py  html_exporter.py  plugin_system.py  preview_engine.py  project_handler.py  script_engine.py  state_manager.py  template_manager.py  utils.py  validation.py  variable_system.py
dvge/exports/: __init__.py
dvge/features/: __init__.py  accessibility_system.py  background_system.py  loot_system.py  marketplace_system.py  media_system.py  minigames.py  puzzle_mechanics.py  qte_system.py  reputation.py  skill_checks.py  sprite_system.py  voice_system.py
dvge/models/: __init__.py  advanced_combat_node.py  base_node.py  character_portrait.py  combat_node.py  dialogue_node.py  dice_roll_node.py  enemy.py  game_timer.py  inventory_node.py  music_system.py  qte_node.py  quest.py  random_event_node.py  script_node.py  shop_node.py  timer_node.py  transitions.py
dvge/plugins/: .gitkeep
dvge/templates/: advanced_combat_rpg.json  basic_story.json  marketplace_demo.json  mystery_detective.json  romance_story.json  rpg_adventure.json  sci_fi_adventure.json
dvge/ui/: __init__.py  ai_integration.py  canvas_manager.py  canvas_widget.py  contextual_suggestions_widget.py  main_menu.py  main_window.py  menus.py  project_panel.py  properties_panel.py  pyside_wrapper.py  responsive_layout.py  search_dialog.py  sidebar.py
plugins/example_plugin/: __init__.py  plugin.json
tests/: conftest.py  test_state_manager.py  test_validation.py
tests/ai/: __init__.py  test_ai_system.py
tests/core/: test_batch_operations.py  test_plugin_system.py
tests/features/: .gitkeep
(+62 files in other folders)
